--- a/roadmap/README
+++ b/roadmap/README
@@ -1361,7 +1361,7 @@ CONFIGURATION
 
          <<Default:>> red
 
-     [Selected Street.Background] The color for the background of the selected
+    [Selected Street.Background] The color for the background of the selected
          street name.
 
          <<Format:>> color
@@ -1609,6 +1609,12 @@ CONFIGURATION
          <<Format:>> boolean
 
          <<Default:>> "yes"
+
+    [Voice.Mute] Defines if the voice function was muted by the user.
+
+         <<Format:>> boolean
+
+         <<Default:>> "no"
 
     [Hold.Direction] An artefact of saving the context. Ignored.
 
